--- a/src/views/home/contact.html
+++ b/src/views/home/contact.html
@@ -15,10 +15,46 @@
     <div class="row justify-content-center">
       <h2>{{ translate 'HOME_CONTACT_TITLE' }}</h2>
     </div>
-    <div class="row justify-content-center">
-
+    <div class="row justify-content-center" id="invite-form">
+      <form class="form">
+        <div class="row" style="margin-bottom: 15px">
+          <label class="col-4 col-form-label" for="contact-name">Votre nom <span style="color: red">*</span></label>
+          <input class="form-field col-8" type="text" name="contact-name" id="contact-name" required>
+        </div>
+        <div class="row" style="margin-bottom: 15px">
+          <label class="col-4 col-form-label" for="contact-email">Votre email <span style="color: red">*</span></label>
+          <input class="form-field col-8" type="email" name="contact-email" id="contact-email" required>
+        </div>
+        <div class="row" style="margin-bottom: 15px">
+          <label class="col-4 col-form-label" for="contact-message">Votre message <span style="color: red">*</span></label>
+          <textarea class="form-field col-8" id="contact-message" name="contact-message"rows="5" cols="33" style="width: 466px" required></textarea>
+        </div>
+        <div class="row justify-content-center">
+          <button type="button" class="btn btn-success" id="btn-contact">
+            Envoyer mon message <i id="wait-contact" class="fas fa-circle-notch fa-spin" style="display: none"></i>
+          </button>
+        </div>
+      </form>
     </div>
   </div>
 </section>
+
+{% endblock %}
+
+{% block scripts %}
+
+<script type="text/javascript">
+  $(function() {
+
+    $('#btn-contact').on('click', function() {
+      sendContact(
+        $('#contact-name').val(),
+        $('#contact-email').val(),
+        $('#contact-message').val()
+      );
+    });
+
+  });
+</script>
 
 {% endblock %}
