--- a/src/views/home/inscription.html
+++ b/src/views/home/inscription.html
@@ -25,19 +25,19 @@
           <input class="form-field col-8" type="email" name="member-email" id="member-email" readonly>
         </div>
         <div class="row" style="margin-bottom: 15px">
-          <label class="col-4 col-form-label" for="member-lastname">{{ translate 'HOME_REGISTER_LASTNAME' }}</label>
+          <label class="col-4 col-form-label" for="member-lastname">{{ translate 'HOME_REGISTER_LASTNAME' }} <span style="color: red">*</span></label>
           <input class="form-field col-8" type="text" name="member-lastname" id="member-lastname" required>
         </div>
         <div class="row" style="margin-bottom: 15px">
-          <label class="col-4 col-form-label" for="member-firstname">{{ translate 'HOME_REGISTER_FIRSTNAME' }}</label>
+          <label class="col-4 col-form-label" for="member-firstname">{{ translate 'HOME_REGISTER_FIRSTNAME' }} <span style="color: red">*</span></label>
           <input class="form-field col-8" type="text" name="member-firstname" id="member-firstname" required>
         </div>
         <div class="row" style="margin-bottom: 15px">
-          <label class="col-4 col-form-label" for="member-password">{{ translate 'HOME_REGISTER_PASSWORD' }}</label>
+          <label class="col-4 col-form-label" for="member-password">{{ translate 'HOME_REGISTER_PASSWORD' }} <span style="color: red">*</span></label>
           <input class="form-field col-8" type="password" name="member-password" id="member-password" required>
         </div>
         <div class="row" style="margin-bottom: 25px">
-          <label class="col-4 col-form-label" for="member-password-check">{{ translate 'HOME_REGISTER_PASSWORDCHECK' }}</label>
+          <label class="col-4 col-form-label" for="member-password-check">{{ translate 'HOME_REGISTER_PASSWORDCHECK' }} <span style="color: red">*</span></label>
           <input class="form-field col-8" type="password" name="member-password-check" id="member-password-check" required>
         </div>
         <div class="row justify-content-center">
