--- a/src/views/dashboard/forum_category.html
+++ b/src/views/dashboard/forum_category.html
@@ -23,9 +23,6 @@
     <button type="button" class="btn btn-primary btn-sm btn-new-post" style="margin-right: 5px">
       Nouvelle discussion
     </button>
-    <button type="button" class="btn btn-danger btn-sm" id="btn-new-response">
-      <i class="fas fa-trash-alt"></i>
-    </button>
   </div>
   <div class="row justify-content-center" id="posts-wait">
     <i class="fas fa-circle-notch fa-spin fa-2x"></i>
@@ -64,8 +61,8 @@
       <div class="row justify-content-center" style="margin-top: 30px;">
         <form class="form">
           <div class="row">
-            <label class="col-4 col-form-label" for="post-title">Titre de la discussion</label><br>
-            <input type="text" class="form-field col-8" name="post-title" id="post-title" placeholder="">
+            <label class="col-4 col-form-label" for="post-title">Titre de la discussion <span style="color: red">*</span></label><br>
+            <input type="text" class="form-field col-8" name="post-title" id="post-title" required>
           </div>
           <div style="margin-top: 15px">
             <div class="wysiwyg"></div>
