--- a/src/views/dashboard/profile.html
+++ b/src/views/dashboard/profile.html
@@ -21,24 +21,24 @@ Profile
   <div class="row justify-content-center" id="profile-edit" style="display: none">
     <form class="form">
       <div class="row" style="margin-bottom: 10px">
-        <label class="col-4 col-form-label" for="profile-email">Email</label><br>
-        <input type="email" class="form-field col-8" name="profile-email" id="profile-email" placeholder="">
+        <label class="col-4 col-form-label" for="profile-email">Email <span style="color: red">*</span></label><br>
+        <input type="email" class="form-field col-8" name="profile-email" id="profile-email" required>
       </div>
       <div class="row" style="margin-bottom: 10px">
-        <label class="col-4 col-form-label" for="profile-firstname">Firstname</label><br>
-        <input type="text" class="form-field col-8" name="profile-firstname" id="profile-firstname" placeholder="">
+        <label class="col-4 col-form-label" for="profile-firstname">Firstname <span style="color: red">*</span></label><br>
+        <input type="text" class="form-field col-8" name="profile-firstname" id="profile-firstname" required>
       </div>
       <div class="row" style="margin-bottom: 10px">
-        <label class="col-4 col-form-label" for="profile-lastname">Lastname</label><br>
-        <input type="text" class="form-field col-8" name="profile-lastname" id="profile-lastname" placeholder="">
+        <label class="col-4 col-form-label" for="profile-lastname">Lastname <span style="color: red">*</span></label><br>
+        <input type="text" class="form-field col-8" name="profile-lastname" id="profile-lastname" required>
       </div>
       <div class="row" style="margin-bottom: 10px">
         <label class="col-4 col-form-label" for="profile-password">Change password</label><br>
-        <input type="password" class="form-field col-8" name="profile-password" id="profile-password" placeholder="">
+        <input type="password" class="form-field col-8" name="profile-password" id="profile-password">
       </div>
       <div class="row" style="margin-bottom: 25px">
         <label class="col-4 col-form-label" for="profile-passwordcheck">Change password check</label><br>
-        <input type="password" class="form-field col-8" name="profile-passwordcheck" id="profile-passwordcheck" placeholder="">
+        <input type="password" class="form-field col-8" name="profile-passwordcheck" id="profile-passwordcheck">
       </div>
       <div class="row justify-content-center">
         <button type="button" class="btn btn-success" id="btn-update-profile">
