Continuation de la gestion du forum

--- a/src/views/dashboard/admin.html
+++ b/src/views/dashboard/admin.html
@@ -163,15 +163,51 @@
   </tr>
 </table>
 
+<div id="modal-new-category" class="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+      <h2>{{ translate 'DASHBOARD_FORUM_MODAL_NEWCATEGORY_TITLE' }}</h2>
+    </div>
+    <div class="modal-body">
+      <div class="row justify-content-center" style="margin-top: 30px;">
+        <form class="form">
+          <div class="row" style="margin-bottom: 10px">
+            <label class="col-4 col-form-label" for="category-name">{{ translate 'DASHBOARD_FORUM_MODAL_NAME' }} <span style="color: red">*</span></label><br>
+            <input type="text" class="form-field col-8" name="category-name" id="category-name" placeholder="{{ translate 'DASHBOARD_FORUM_MODAL_NAME_EXAMPLE' }}" required>
+          </div>
+          <div class="row">
+            <label class="col-4 col-form-label" for="category-description">Description de la catégorie <span style="color: red">*</span></label><br>
+            <input type="text" class="form-field col-8" name="category-description" id="category-description" required>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="modal-footer d-flex justify-content-end">
+      <button type="button" class="btn btn-success btn-sm" id="btn-create-category">
+        <i class="fas fa-plus"></i> {{ translate 'DASHBOARD_FORUM_MODAL_ADDBTN' }} <i id="wait-creating-category" class="fas fa-circle-notch fa-spin" style="display: none"></i>
+      </button>
+    </div>
+  </div>
+</div>
+
 <div id="category-first-template" class="row d-none">
   <h2 class="col-3"><b class="category-title"></b></h2>
   <h5 class="offset-5 col-2" style="align-self: end; margin-bottom: 0">Posts: <span class="category-posts"></span></h5>
   <h5 class="col-2" style="align-self: end; margin-bottom: 0"><b class="category-date">${category.updated_at}</b></h5>
 </div>
 <div id="category-second-template" class="row d-none">
-  <button class="btn btn-danger" style="margin-left: 5px">
+  <button class="btn btn-danger" style="margin-left: auto; margin-top: auto; margin-bottom: auto;">
     <i class="fas fa-trash-alt"></i>
   </button>
+  <div class="d-flex" style="flex-direction: column;">
+    <button class="btn btn-primary">
+      <i class="fas fa-chevron-up"></i>
+    </button>
+    <button class="btn btn-primary">
+      <i class="fas fa-chevron-down"></i>
+    </button>
+  </div>
 </div>
 
 {% endblock %}
@@ -184,7 +220,8 @@
 
 <script>
   $(function() {
-    var modal = $('#modal-new-member');
+    var modalNewMember = $('#modal-new-member');
+    var modalNewCategory = $('#modal-new-category');
 
     $("#member-search").bind("input", function () {
       var that = this;
@@ -195,7 +232,7 @@
     });
 
     $('.btn-new-member').on("click", function() {
-      modal.showModal();
+      modalNewMember.showModal();
     });
 
     $('#btn-cancel-edit').on('click', function() {
@@ -238,7 +275,16 @@
       );
     });
 
+    $('#btn-new-category').on("click", function() {
+      modalNewCategory.showModal();
+    });
+
+    $('#btn-create-category').on('click', function() {
+      createCategory($('#category-name').val(), $('#category-description').val());
+    });
+
     searchMember($('#member-search').val());
+    getCategories();
 
   });
 </script>
