--- a/src/views/dashboard/forum.html
+++ b/src/views/dashboard/forum.html
@@ -32,6 +32,7 @@
   <h5 class="col-2" style="align-self: end; margin-bottom: 0"><b class="category-date">${category.updated_at}</b></h5>
 </div>
 <div id="category-second-template" class="row d-none">
+  <div class="col-5 category-description"></div>
   <a href="/dashboard/forum/category/${category.id}" class="btn btn-primary" style="margin-left: auto">
     {{ translate 'DASHBOARD_FORUM_GOPOSTSBTN' }}
   </a>
