--- a/src/views/home/faq.html
+++ b/src/views/home/faq.html
@@ -26,9 +26,13 @@
   </div>
 </section>
 
-<div id="faq-template" class="contact d-flex flex-column d-none" style="align-items: center; margin-bottom: 5px">
-  <h3 style="margin-bottom: 0"></h3>
-  <p style="margin-top: 5px"></p>
+<div id="faq-template" class="d-none" style="margin-bottom: 5px">
+  <div class="row justify-content-center">
+    <h3 style="margin-bottom: 0"></h3>
+  </div>
+  <div class="row justify-content-center">
+    <p style="margin-top: 5px"></p>
+  </div>
 </div>
 
 {% endblock %}
