--- a/src/views/dashboard/forum_post.html
+++ b/src/views/dashboard/forum_post.html
@@ -49,7 +49,7 @@
       <div class="wysiwyg"></div>
       <div class="row" style="justify-content: end; margin-top: 15px">
         <button type="button" class="btn btn-primary btn-sm" id="btn-new-response" style="margin-right: 5px">
-          Répondre <i id="wait-creating-response" class="fas fa-circle-notch fa-spin" style="display: none"></i>
+          {{ translate 'DASHBOARD_FORUMPOST_REPLYBTN' }} <i id="wait-creating-response" class="fas fa-circle-notch fa-spin" style="display: none"></i>
         </button>
       </div>
     </form>
