--- a/src/views/dashboard/admin.html
+++ b/src/views/dashboard/admin.html
@@ -31,7 +31,7 @@
       <form class="form" style="width: 100%;margin: 0 55px">
         <input type="text" style="width: 90%;" class="form-field" name="member-search" id="member-search" placeholder="Ex: John Doe">
         <button type="button" class="btn btn-primary btn-sm" style="margin-left: 5px" id="btn-toggle-filter">
-          Filtres
+          {{ translate 'DASHBOARD_ADMIN_FILTERBTN' }}
         </button>
       </form>
     </div>
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="offset-10 col-2">
         <button type="button" class="btn btn-success btn-sm" id="btn-new-category">
-          <i class="fas fa-plus"></i> {{ translate 'DASHBOARD_FORUM_ADDCATEGORYBTN' }}
+          <i class="fas fa-plus"></i> {{ translate 'DASHBOARD_ADMIN_FORUM_ADDCATEGORYBTN' }}
         </button>
       </div>
     </div>
@@ -84,7 +84,7 @@
       <i class="fas fa-circle-notch fa-spin fa-2x"></i>
     </div>
     <div class="row justify-content-center" id="noforums" style="display: none">
-      <h3>{{ translate 'DASHBOARD_FORUM_NOCATEGORY' }}</h3>
+      <h3>{{ translate 'DASHBOARD_ADMIN_FORUM_NOCATEGORY' }}</h3>
     </div>
     <div id="forums">
     </div>
@@ -93,7 +93,7 @@
     <div class="row">
       <div class="offset-10 col-2">
         <button type="button" class="btn btn-success btn-sm" id="btn-new-faq">
-          <i class="fas fa-plus"></i> Nouvelle question
+          <i class="fas fa-plus"></i> {{ translate 'DASHBOARD_ADMIN_FAQ_CREATEBTN'}}
         </button>
       </div>
     </div>
@@ -101,7 +101,7 @@
       <i class="fas fa-circle-notch fa-spin fa-2x"></i>
     </div>
     <div class="row justify-content-center" id="nofaq" style="display: none">
-      <h3>{{ translate 'HOME_FAQ_NOFAQ' }}</h3>
+      <h3>{{ translate 'DASHBOARD_ADMIN_FAQ_NOFAQ' }}</h3>
     </div>
     <div id="faq-questions">
     </div>
