--- a/src/views/dashboard/profile.html
+++ b/src/views/dashboard/profile.html
@@ -1,18 +1,18 @@
 {% extends 'base_dashboard.html' %}
 
 {% block title %}
-Profile
+{{ translate 'DASHBOARD_PROFILE_TITLE' }}
 {% endblock %}
 
 {% block navtitle %}
-Profile
+{{ translate 'DASHBOARD_PROFILE_TITLE' }}
 {% endblock %}
 
 {% block body %}
 
 <div class="container-fluid" style="padding-bottom: 60px;">
   <div class="row justify-content-center">
-    <h2>Profile - <span id="profile-name"><i class="fas fa-circle-notch fa-spin"></i></span></h2>
+    <h2>{{ translate 'DASHBOARD_PROFILE_TITLE' }} - <span id="profile-name"><i class="fas fa-circle-notch fa-spin"></i></span></h2>
   </div>
 
   <div class="row justify-content-center" id="profile-wait">
@@ -21,28 +21,28 @@ Profile
   <div class="row justify-content-center" id="profile-edit" style="display: none">
     <form class="form">
       <div class="row" style="margin-bottom: 10px">
-        <label class="col-4 col-form-label" for="profile-email">Email <span style="color: red">*</span></label><br>
+        <label class="col-4 col-form-label" for="profile-email">{{ translate 'DASHBOARD_PROFILE_EMAIL' }} <span style="color: red">*</span></label><br>
         <input type="email" class="form-field col-8" name="profile-email" id="profile-email" required>
       </div>
       <div class="row" style="margin-bottom: 10px">
-        <label class="col-4 col-form-label" for="profile-firstname">Firstname <span style="color: red">*</span></label><br>
+        <label class="col-4 col-form-label" for="profile-firstname">{{ translate 'DASHBOARD_PROFILE_FIRSTNAME' }} <span style="color: red">*</span></label><br>
         <input type="text" class="form-field col-8" name="profile-firstname" id="profile-firstname" required>
       </div>
       <div class="row" style="margin-bottom: 10px">
-        <label class="col-4 col-form-label" for="profile-lastname">Lastname <span style="color: red">*</span></label><br>
+        <label class="col-4 col-form-label" for="profile-lastname">{{ translate 'DASHBOARD_PROFILE_LASTNAME' }} <span style="color: red">*</span></label><br>
         <input type="text" class="form-field col-8" name="profile-lastname" id="profile-lastname" required>
       </div>
       <div class="row" style="margin-bottom: 10px">
-        <label class="col-4 col-form-label" for="profile-password">Change password</label><br>
+        <label class="col-4 col-form-label" for="profile-password">{{ translate 'DASHBOARD_PROFILE_PASSWORD' }}</label><br>
         <input type="password" class="form-field col-8" name="profile-password" id="profile-password">
       </div>
       <div class="row" style="margin-bottom: 25px">
-        <label class="col-4 col-form-label" for="profile-passwordcheck">Change password check</label><br>
+        <label class="col-4 col-form-label" for="profile-passwordcheck">{{ translate 'DASHBOARD_PROFILE_PASSWORDCHECK' }}</label><br>
         <input type="password" class="form-field col-8" name="profile-passwordcheck" id="profile-passwordcheck">
       </div>
       <div class="row justify-content-center">
         <button type="button" class="btn btn-success" id="btn-update-profile">
-          Mettre à jour mes informations <i id="wait-update-profile" class="fas fa-circle-notch fa-spin" style="display: none"></i>
+          {{ translate 'DASHBOARD_PROFILE_UPDATEBTN' }} <i id="wait-update-profile" class="fas fa-circle-notch fa-spin" style="display: none"></i>
         </button>
       </div>
     </form>
