--- a/src/views/404.html
+++ b/src/views/404.html
@@ -22,7 +22,7 @@
 
     <footer>
       <p>
-        <a href="/conditions_generales_de_ventes">{{ translate 'CGV' }}</a> &#xa9; 2019, Testify.fr Powered by our own skills
+        <a href="/conditions_generales_de_ventes">{{ translate 'CGU' }}</a> &#xa9; 2019, Testify.fr Powered by our own skills
       </p>
     </footer>
   </body>
