--- a/src/views/dashboard/admin.html
+++ b/src/views/dashboard/admin.html
@@ -10,6 +10,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="/styles/tabs.css">
+<link rel="stylesheet" href="/styles/paginator.css">
 {% endblock %}
 
 {% block body %}
@@ -68,6 +69,7 @@
     <div class="row justify-content-center" id="wait-search-member" style="margin-top: 15px">
       <i class="fas fa-circle-notch fa-spin fa-2x"></i>
     </div>
+    <div class="row justify-content-center paginator" id="contact-pagination"></div>
   </div>
   <div id="tickets-tab" class="row tabcontent">
     TODO: A faire !
@@ -346,6 +348,7 @@
 
 <script type="text/javascript" src="/scripts/modal.js" ></script>
 <script type="text/javascript" src="/scripts/tabs.js" ></script>
+<script type="text/javascript" src="/scripts/paginator.js" ></script>
 <script type="text/javascript" src="/scripts/dashboard-admin.js" ></script>
 
 <script>
@@ -355,11 +358,18 @@
     var modalNewCategory = $('#modal-new-category');
     var modalNewFaq = $('#modal-new-faq');
 
+    var contactPageSize = 5;
+    var paginatorContacts = new Paginator($('#contact-pagination'));
+
+    paginatorContacts.setOnPaginateChange(function(page) {
+      searchMember($('#member-search').val(), page, contactPageSize, paginatorContacts);
+    });
+
     $("#member-search").bind("input", function () {
       var that = this;
       window.clearTimeout($(this).data('timeout'));
       $(this).data('timeout', setTimeout(function () {
-        searchMember($(that).val());
+        searchMember($(that).val(), 1, contactPageSize, paginatorContacts);
       }, 500));
     });
 
@@ -446,7 +456,7 @@
       createFAQ($('#faq-question').val(), $('#faq-answer').val());
     });
 
-    searchMember($('#member-search').val());
+    searchMember($('#member-search').val(), 1, contactPageSize, paginatorContacts);
     getCategories();
     getFAQ();
 
