--- a/public/styles/testify.css
+++ b/public/styles/testify.css
@@ -59,13 +59,13 @@ a {
 /* Style de la barre de navigation */
 .navigation {
   position: sticky;
-  top: 70px;
+  top: 73px;
   background-color: #004e86;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
-  z-index: 1;
+  z-index: 0;
 }
 
 /* Style pour les tableaux (à optimiser) */
@@ -93,6 +93,7 @@ th {
 
 /* Style pour les zones de texte */
 section {
+  position:relative;
   z-index: -1; /* Gere la disposition par rapport aux autres éléments */
   display: flex;
   justify-content: space-around;
