Commencement de l'implémentation du système de ticketing

--- a/src/views/base_dashboard.html
+++ b/src/views/base_dashboard.html
@@ -60,6 +60,12 @@
             {{ translate 'DASHBOARD_MENU_ADMIN' }}
           </a>
         </div>
+        <div class="nav-element" id="tickets-nav" style="display: none">
+          <a href="/dashboard/tickets">
+            <i class="fas fa-ticket-alt"></i>
+            {{ translate 'DASHBOARD_MENU_TICKET' }}
+          </a>
+        </div>
         <div class="nav-element" id="chat-nav">
           <a href="/dashboard/forum">
             <i class="fas fa-comments"></i>
