--- a/public/styles/testify_dashboard.css
+++ b/public/styles/testify_dashboard.css
@@ -197,3 +197,19 @@ table th {
   background-color: #004e86;
   color: white;
 }
+
+.status-3 {
+  background: linear-gradient(to right, rgba(255, 69, 0, 0.3), rgba(255, 255, 255, 0));
+}
+
+.status-0 {
+  background: linear-gradient(to right, rgba(255, 165, 0, 0.3), rgba(255, 255, 255, 0));
+}
+
+.status-1 {
+  background: linear-gradient(to right, rgba(0, 191, 255, 0.3), rgba(255, 255, 255, 0));
+}
+
+.status-2 {
+  background: linear-gradient(to right, rgba(50, 205, 50, 0.3), rgba(255, 255, 255, 0));
+}
